--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brittany Miller | Developer & Designer</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="style.css">
+  <!-- Optional: Add a cool retro Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -18,14 +20,31 @@
 
   <main>
     <section class="hero">
-      <h1>Hi, I'm Brittany Miller</h1>
-      <p>A Front End Web Developer creating awesome things.</p>
-      <a href="portfolio.html" class="btn">View My Work</a>
+      <h1>Brittany Miller</h1>
+      <p>Front End Developer & Designer bringing color and code together.</p>
+      <a href="portfolio.html" class="btn">Explore Full Portfolio</a>
     </section>
-  </main>
 
-  <footer>
-    <p>&copy; 2025 Brittany Miller. All rights reserved.</p>
+    <section class="featured-projects">
+      <h2>Featured Case Studies</h2>
+      <div class="project-grid">
+        <div class="project">
+          <img src="images/everyday-meals.jpg" alt="Everyday Meals project thumbnail">
+          <h3>Everyday Meals</h3>
+          <p>A responsive cooking tutorial website designed to feel friendly, accessible, and clean — from wireframe to code.</p>
+          <a href="portfolio.html#everyday-meals" class="btn">View Case Study</a>
+        </div>
+
+        <div class="project">
+          <img src="images/matthew-trent.jpg" alt="Matthew Trent project thumbnail">
+          <h3>Matthew Trent Wireframe</h3>
+          <p>A UX study for small business.</p>
+          </div>
+        </section>
+        </main>
+
+        <footer>
+    <p>&copy; 2025 Brittany Miller.</p>
   </footer>
 </body>
 </html>
