--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>About Me | Brittany Miller</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -16,18 +16,33 @@
   </header>
 
   <main>
-    <section>
-      <h1>About Me</h1>
-      <p>I'm a Front End Web Developer with expertise in coding and designing websites.</p>
-      
-      <h2>Skills</h2>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-      </ul>
+<main>
+  <section class="about-section">
+    <h1>About Me</h1>
+    <p class="intro">I’m a Front End Web Developer who loves blending clean code with vibrant design. My work is driven by curiosity, color, and a love for detail.</p>
 
-      <a href="resume.pdf" class="btn">Download Resume</a>
-    </section>
+    <div class="about-columns">
+      <div class="bio">
+        <h2>What I Do</h2>
+        <p>I specialize in responsive websites, building accessible and visually compelling user experiences using HTML, CSS, and modern frontend tools. Whether I’m coding from scratch or redesigning an interface, I always focus on thoughtful UX and aesthetic harmony.</p>
+      </div>
+
+      <div class="skills">
+        <h2>Skills</h2>
+        <ul>
+          <li>HTML & CSS</li>
+          <li>Responsive Web Design</li>
+          <li>Accessibility (WCAG)</li>
+          <li>UX/UI Design</li>
+          <li>Figma & Prototyping</li>
+        </ul>
+      </div>
+    </div>
+
+    <a href="resume.pdf" class="btn resume-btn">📄 Download Resume</a>
+  </section>
+</main>
+
   </main>
 
   <footer>
