--- a/index.html
+++ b/index.html
@@ -29,19 +29,29 @@
       <h2>Featured Case Studies</h2>
       <div class="project-grid">
         <div class="project">
-          <img src="images/everyday-meals.jpg" alt="Everyday Meals project thumbnail">
+          <img src="images/meals-thumbnail.png" alt="Everyday Meals project thumbnail">
           <h3>Everyday Meals</h3>
           <p>A responsive cooking tutorial website designed to feel friendly, accessible, and clean — from wireframe to code.</p>
-          <a href="portfolio.html#everyday-meals" class="btn">View Case Study</a>
+          <a href="everyday-meals.html" class="btn">View Case Study</a>
         </div>
 
         <div class="project">
-          <img src="images/matthew-trent.jpg" alt="Matthew Trent project thumbnail">
-          <h3>Matthew Trent Wireframe</h3>
-          <p>A UX study for small business.</p>
+          <img src="images/trent-thumbnail.png" alt="Matthew Trent project thumbnail">
+          <h3>Matthew Trent</h3>
+          <p>A UX study for small business with an in-depth user analyses.</p>
+          <a href="portfolio.html#everyday-meals" class="btn">View Case Study</a>
           </div>
+
+           <div class="project">
+          <img src="images/wok-thumbnail.jpg" alt="Matthew Trent project thumbnail">
+          <h3>Wok Asian Cuisine</h3>
+          <p>A website built from a wireframed homepage with a custom contact page.</p>
+          <a href="portfolio.html#everyday-meals" class="btn">View Case Study</a>
+          </div>
+
         </section>
         </main>
+
 
         <footer>
     <p>&copy; 2025 Brittany Miller.</p>
