--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <main>
   <section class="about-section">
     <h1>About Me</h1>
-    <p class="intro">I’m a Front End Web Developer who loves blending clean code with vibrant design. My work is driven by curiosity, color, and a love for detail.</p>
+    <p class="intro">I’m a Front End Web Developer who loves blending clean code with vibrant design. </br> My work is driven by curiosity, color, and a love for detail.</p>
 
     <div class="about-columns">
       <div class="bio">
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <a href="resume.pdf" class="btn resume-btn">📄 Download Resume</a>
+    <a href="Brittany Miller Resume.pdf" class="btn resume-btn">📄 Download Resume</a>
   </section>
 </main>
 
