--- a/portfolio.html
+++ b/portfolio.html
@@ -19,12 +19,25 @@
     <h1>My Projects</h1>
     <div class="project-grid">
       <div class="project">
-        <img src="images/project1.jpg" alt="Project 1">
-        <h3>Project 1</h3>
+        <img src="images/meals-thumbnail.png" alt="Project 1">
+        <h3>Everyday Meals</h3>
         <p>Description of the project.</p>
-        <a href="#" class="btn">See Live</a>
+        <a href="everyday-meals.html" class="btn">See Project</a>
       </div>
-      <!-- Repeat for other projects -->
+      
+      <div class="project">
+        <img src="images/trent-thumbnail.png" alt="Project 1">
+        <h3>Matthew Trent</h3>
+        <p>Description of the project.</p>
+        <a href="#" class="btn">See Project</a>
+      </div>
+
+      <div class="project">
+        <img src="images/wok-thumbnail.jpg" alt="Project 1">
+        <h3>Wok Asian Cuisine</h3>
+        <p>Description of the project.</p>
+        <a href="#" class="btn">See Project</a>
+      </div>
     </div>
   </main>
 
