--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
   <header>
     <nav>
+      <a href="index.html" class="logo">
+      <img src="images/logo.png" alt="My Portfolio Logo">
+    </a>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="portfolio.html">Portfolio</a>
@@ -29,7 +32,7 @@
       <h2>Featured Case Studies</h2>
       <div class="project-grid">
         <div class="project">
-          <img src="images/meals-thumbnail.png" alt="Everyday Meals project thumbnail">
+          <a href="everyday-meals.html"><img src="images/meals-thumbnail.png" alt="Everyday Meals project thumbnail"></a>
           <h3>Everyday Meals</h3>
           <p>A responsive cooking tutorial website designed to feel friendly, accessible, and clean — from wireframe to code.</p>
           <a href="everyday-meals.html" class="btn">View Case Study</a>
@@ -39,14 +42,14 @@
           <img src="images/trent-thumbnail.png" alt="Matthew Trent project thumbnail">
           <h3>Matthew Trent</h3>
           <p>A UX study for small business with an in-depth user analyses.</p>
-          <a href="portfolio.html#everyday-meals" class="btn">View Case Study</a>
+          <a href="matthew-trent.html" class="btn">View Case Study</a>
           </div>
 
            <div class="project">
-          <img src="images/wok-thumbnail.jpg" alt="Matthew Trent project thumbnail">
+          <img src="images/wok-thumbnail.jpg" alt="Wok Cuisine project thumbnail">
           <h3>Wok Asian Cuisine</h3>
           <p>A website built from a wireframed homepage with a custom contact page.</p>
-          <a href="portfolio.html#everyday-meals" class="btn">View Case Study</a>
+          <a href="wok-cuisine.html" class="btn">View Case Study</a>
           </div>
 
         </section>
