--- a/portfolio.html
+++ b/portfolio.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Work | Brittany Miller</title>
+  <title>Portfolio | Brittany Miller</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <nav>
+       <a href="index.html" class="logo">
+      <img src="images/logo.png" alt="My Portfolio Logo">
+    </a>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="portfolio.html">Portfolio</a>
@@ -21,22 +24,22 @@
       <div class="project">
         <img src="images/meals-thumbnail.png" alt="Project 1">
         <h3>Everyday Meals</h3>
-        <p>Description of the project.</p>
+        <p>A responsive cooking tutorial website.</p>
         <a href="everyday-meals.html" class="btn">See Project</a>
       </div>
       
       <div class="project">
         <img src="images/trent-thumbnail.png" alt="Project 1">
         <h3>Matthew Trent</h3>
-        <p>Description of the project.</p>
-        <a href="#" class="btn">See Project</a>
+        <p>A UX study for small jewelry business.</p>
+        <a href="matthew-trent.html" class="btn">See Project</a>
       </div>
 
       <div class="project">
         <img src="images/wok-thumbnail.jpg" alt="Project 1">
         <h3>Wok Asian Cuisine</h3>
-        <p>Description of the project.</p>
-        <a href="#" class="btn">See Project</a>
+        <p>A restaurant website with a custom contact page.</p>
+        <a href="wok-cuisine.html" class="btn">See Project</a>
       </div>
     </div>
   </main>
