--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
 <body>
   <header>
     <nav>
+       <a href="index.html" class="logo">
+      <img src="images/logo.png" alt="My Portfolio Logo">
+    </a>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="portfolio.html">Portfolio</a>
@@ -39,7 +42,7 @@
       </div>
     </div>
 
-    <a href="Brittany Miller Resume.pdf" class="btn resume-btn">📄 Download Resume</a>
+    <a href="Brittany Miller Resume.pdf" target="_blank" rel="noopener noreferrer" class="btn resume-btn">📄 Download Resume</a>
   </section>
 </main>
 
