--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,9 @@
 <body>
   <header>
     <nav>
+       <a href="index.html" class="logo">
+      <img src="images/logo.png" alt="My Portfolio Logo">
+    </a>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="portfolio.html">Portfolio</a>
